# sandouq

./: .gitignore  README  Sandouq.cabal
Sandouq/: AddDocument.hs  Config.hs  Document.hs  Find.hs  Init.hs  Tools.hs
Sandouq/Internal/: Document.hs  Init.hs  Tools.hs
Sandouq/Internal/Config/: Global.hs  Local.hs
src/: Sandouq.cabal  Test.hs
src/Sandouq/: #Config.hs#  AddDocument.hs  Config.hs  Database.hs  Init.hs  Sandouq.hs
src/Sandouq/Internal/: Database.hs
src/Sandouq/Internal/Documents/: Add.hs
