Name: Sandouq
Version: 0.1
Description: A box/filesystem to store documents in.
License: BSD3
Author: Badi' Abdul-Wahid
Maintainer: abdulwahidc@gmail.com
Build-Type: Simple
Cabal-Version: >= 1.6

Executable sd-init
   Main-is: Sandouq/Init.hs
   Build-Depends: base,SHA,bytestring,directory,filepath,unix,containers

Executable sd-add
   Main-is: Sandouq/AddDocument.hs
   Build-Depends: base,SHA,bytestring,directory,filepath,unix,containers