Name:			Sandouq
Version:		0.1
Stability:		alpha
Synopsis:		A box/filesystem to store documents in.
Homepage:		http://github.com/badi/Sandouq
Bug-reports:    http://github.com/badi/Sandouq/issues
Category:		Utility, Utils
License:		BSD3
Author:			Badi' Abdul-Wahid
Maintainer:		abdulwahidc@gmail.com
Build-Type:		Simple
Cabal-Version:	>= 1.6

Executable sd-init
   main-is:       Sandouq/Init.hs
   Build-Depends: base,SHA,bytestring,directory,filepath,unix,containers

Executable sd-add
   main-is:       Sandouq/AddDocument.hs
   Build-Depends: base,SHA,bytestring,directory,filepath,unix,containers

Executable sd-find
   main-is:		Sandouq/Find.hs
   Build-Depends: base,SHA,bytestring,directory,filepath,unix,containers

source-repository head
  type:     git
  location: git://github.com/badi/Sandouq.git

